--- a/index.html
+++ b/index.html
@@ -103,38 +103,85 @@ p {
   color:#999;
 }
 </style>
-  <style>
-.status-badge {
-  display:inline-block;
-  padding:6px 12px;
-  border-radius:999px;
-  font-weight:700;
-  font-size:14px;
-  color:#fff;
-}
-.s-nowy { background:#9c27b0; }
-.s-w_kontakcie { background:#2196f3; }
-.s-nie_odbiera { background:#ff9800; }
-.s-obsluzony { background:#4caf50; }
-.s-odrzucony { background:#f44336; }
-
-.status-row {
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  flex-wrap:wrap;
-  gap:10px;
-}
-
-.muted {
-  font-size:13px;
-  color:#777;
-}
-
-.disabled {
-  opacity:.4;
-  pointer-events:none;
-}
+<style>
+  .status-badge {
+    display:inline-block;
+    padding:6px 12px;
+    border-radius:999px;
+    font-weight:700;
+    font-size:14px;
+    color:#fff;
+  }
+  .s-nowy { background:#9c27b0; }
+  .s-w_kontakcie { background:#2196f3; }
+  .s-nie_odbiera { background:#ff9800; }
+  .s-obsluzony { background:#4caf50; }
+  .s-odrzucony { background:#f44336; }
+  
+  .status-row {
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    flex-wrap:wrap;
+    gap:10px;
+  }
+  
+  .muted {
+    font-size:13px;
+    color:#777;
+  }
+  
+  .disabled {
+    opacity:.4;
+    pointer-events:none;
+  }
+  .modal {
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,.45);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+  }
+  
+  .modal.hidden {
+    display: none;
+  }
+  
+  .modal-box {
+    background: #fff;
+    padding: 22px;
+    border-radius: 12px;
+    width: 90%;
+    max-width: 360px;
+    text-align: center;
+    box-shadow: 0 10px 30px rgba(0,0,0,.15);
+  }
+  
+  .modal-actions {
+    display: flex;
+    gap: 10px;
+    margin-top: 20px;
+  }
+  
+  .modal-actions button {
+    flex: 1;
+    padding: 10px;
+    border-radius: 6px;
+    border: none;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  button.cancel {
+    background: #eee;
+  }
+  
+  button.confirm {
+    background: #4caf50;
+    color: white;
+  }
 </style>
 </head>
 
@@ -189,10 +236,12 @@ function canEdit(lastUpdate) {
   const diffMin = (Date.now() - new Date(lastUpdate)) / 1000 / 60;
   return diffMin <= 15;
 }
+  
 function render(lead) {
   const status = lead["Obecny status"] || "nowy";
   const lastUpdate = lead["Data ostatniej aktualizacji"];
   const editable = canEdit(lastUpdate);
+  const isNew = status === "nowy" || status === "";
 
   app.innerHTML = `
     <div class="header">
@@ -237,9 +286,9 @@ function render(lead) {
       </div>
 
       <div class="buttons ${editable ? "" : "disabled"}">
-        <a class="obs" onclick="confirmUpdate('obsluzony')">✔ Lead obsłużony</a>
-        <a class="nie" onclick="confirmUpdate('nie_odbiera')">📞 Nie odbiera</a>
-        <a class="odrz" onclick="confirmUpdate('odrzucony')">❌ Lead odrzucony</a>
+        <a class="obs" onclick="handleStatusClick('obsluzony', '${status}')">✔ Lead obsłużony</a>
+        <a class="nie" onclick="handleStatusClick('nie_odbiera', '${status}')">📞 Nie odbiera</a>
+        <a class="odrz" onclick="handleStatusClick('odrzucony', '${status}')">❌ Lead odrzucony</a>
       </div>
 
       ${
@@ -255,9 +304,22 @@ function render(lead) {
     <div class="footer">
       System AdFlow · automatyczna obsługa leadów
     </div>
+
+    <!-- MODAL POTWIERDZENIA -->
+    <div id="confirmModal" class="modal hidden">
+      <div class="modal-box">
+        <h3>Zmienić status?</h3>
+        <p>Ten lead był już wcześniej oznaczony.<br>
+        Czy na pewno chcesz zmienić jego status?</p>
+
+        <div class="modal-actions">
+          <button class="cancel" onclick="closeModal()">Anuluj</button>
+          <button class="confirm" id="confirmBtn">Zmień status</button>
+        </div>
+      </div>
+    </div>
   `;
 }
-
   
 function confirmUpdate(status) {
   if (!confirm("Czy na pewno chcesz zmienić status leada?")) return;
@@ -269,6 +331,28 @@ function updateStatus(status) {
     method: "POST",
     mode: "no-cors"
   });
+
+let pendingStatus = null;
+
+function handleStatusClick(newStatus, currentStatus) {
+  if (currentStatus === "nowy" || currentStatus === "") {
+    updateStatus(newStatus);
+    return;
+  }
+
+  pendingStatus = newStatus;
+  document.getElementById("confirmModal").classList.remove("hidden");
+
+  document.getElementById("confirmBtn").onclick = () => {
+    updateStatus(pendingStatus);
+    closeModal();
+  };
+}
+
+function closeModal() {
+  document.getElementById("confirmModal").classList.add("hidden");
+  pendingStatus = null;
+}
 
   app.innerHTML = `
     <div class="content">
