--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@ p {
   
   .disabled {
     opacity:.4;
+    pointer-events: none;
+    cursor: default;
+    filter: grayscale(40%);
   }
   
   .modal {
