--- a/index.html
+++ b/index.html
@@ -422,13 +422,90 @@ function closeModal() {
   pendingStatus = null;
 }
 
-if (!row || !token) {
-  showError("Nieprawidłowy link");
+// ===== ROUTER =====
+const action = params.get("action");
+
+if (action === "list") {
+  loadList();
+} else if (row && token) {
+  loadSingle();
 } else {
+  showError("Nieprawidłowy link");
+}
+
+// ===== ROUTING FUNKCJE =====
+
+function loadSingle() {
   fetch(`${API_URL}?row=${row}&token=${token}`)
     .then(r => r.json())
-    .then(d => d.success ? render(d.lead) : showError("Brak dostępu do leada"))
+    .then(d => d.success
+      ? render(d.lead)
+      : showError("Brak dostępu do leada")
+    )
     .catch(() => showError("Błąd połączenia z API"));
+}
+
+function loadList() {
+  app.innerHTML = `
+    <div class="content">
+      <h3>📊 Lista leadów</h3>
+      <p class="muted">Ładowanie danych…</p>
+    </div>
+  `;
+
+  fetch(`${API_URL}?action=list&token=${token}`)
+    .then(r => r.json())
+    .then(d => {
+      if (!d.success) {
+        showError("Brak dostępu do listy leadów");
+        return;
+      }
+      renderList(d.rows);
+    })
+    .catch(() => showError("Błąd połączenia z API"));
+}
+
+function renderList(rows) {
+  app.innerHTML = `
+    <div class="header">
+      <h2>📊 Dashboard leadów</h2>
+    </div>
+
+    <div class="content">
+      <table style="width:100%; border-collapse:collapse">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Data</th>
+            <th>Pacjent</th>
+            <th>Telefon</th>
+            <th>Status</th>
+            <th>Kampania</th>
+          </tr>
+        </thead>
+        <tbody>
+          ${rows.map(r => `
+            <tr>
+              <td>${r.id}</td>
+              <td>${formatDate(r.created)}</td>
+              <td>${r.name}</td>
+              <td>${r.phone}</td>
+              <td>
+                <span class="status-badge ${statusClass(r.status)}">
+                  ${r.status || "nowy"}
+                </span>
+              </td>
+              <td>${r.campaign || "-"}</td>
+            </tr>
+          `).join("")}
+        </tbody>
+      </table>
+    </div>
+
+    <div class="footer">
+      System AdFlow · podgląd leadów
+    </div>
+  `;
 }
 </script>
 
