--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ function renderList(rows) {
           <button id="loadMoreBtn"
             onclick="loadList(false)"
             style="padding:12px 20px;border-radius:8px;border:1px solid #ccc;cursor:pointer">
-            ➕ Załaduj kolejne 30
+            ➕ Załaduj Więcej
           </button>
         </div>
       </div>
