--- a/index.html
+++ b/index.html
@@ -251,6 +251,48 @@ p {
     .dashboard-toolbar input { width: 100%; }
     .dashboard-toolbar div { justify-content: space-between; display: flex; }
   }
+
+  .loader {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.loader.hidden {
+  display: none;
+}
+
+.loader-box {
+  background: #fff;
+  padding: 30px 40px;
+  border-radius: 12px;
+  text-align: center;
+  box-shadow: 0 10px 30px rgba(0,0,0,.25);
+}
+
+.loader-text {
+  margin-top: 15px;
+  font-size: 15px;
+  color: #333;
+}
+
+.spinner {
+  width: 40px;
+  height: 40px;
+  border: 4px solid #ddd;
+  border-top-color: #333;
+  border-radius: 50%;
+  animation: spin 0.9s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  to { transform: rotate(360deg); }
+}
   
 </style>
 </head>
@@ -284,6 +326,16 @@ function formatDate(iso) {
     hour: "2-digit",
     minute: "2-digit"
   });
+}
+
+function showLoader(text = "Ładowanie…") {
+  const loader = document.getElementById("loader");
+  loader.querySelector(".loader-text").textContent = text;
+  loader.classList.remove("hidden");
+}
+
+function hideLoader() {
+  document.getElementById("loader").classList.add("hidden");
 }
 
 function showError(msg) {
@@ -531,6 +583,21 @@ function loadList(reset = true) {
     `;
   }
 
+  function loadList(reset = true) {
+  document.body.classList.add("dashboard-mode");
+
+  if (reset) {
+    offset = 0;
+    allRows = [];
+    app.innerHTML = `
+      <div class="content">
+        <h3>📊 Lista leadów</h3>
+      </div>
+    `;
+  }
+
+  showLoader("Ładowanie leadów…");
+
   fetch(`${API_URL}?action=list&token=${token}&limit=${LIMIT}&offset=${offset}`)
     .then(r => r.json())
     .then(d => {
@@ -745,6 +812,11 @@ function toggleDateSort() {
   filterTable(); // Odśwież widok z uwzględnieniem filtrów
 }
 </script>
-
+<div id="loader" class="loader hidden">
+  <div class="loader-box">
+    <div class="spinner"></div>
+    <div class="loader-text">Ładowanie leadów…</div>
+  </div>
+</div>
 </body>
 </html>
