--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ p {
     color:#fff;
   }
   .s-nowy { background:#9c27b0; }
-  .s-w_kontakcie { background:#2196f3; }
+  .s-porzucony { background: #9e9e9e; }
   .s-nie_odbiera { background:#ff9800; }
   .s-obsluzony { background:#4caf50; }
   .s-odrzucony { background:#f44336; }
@@ -369,7 +369,7 @@ function showError(msg) {
 function statusClass(status) {
   return {
     "nowy": "s-nowy",
-    "w_kontakcie": "s-w_kontakcie",
+    "w_porzucony": "s-porzucony",
     "nie_odbiera": "s-nie_odbiera",
     "obsluzony": "s-obsluzony",
     "odrzucony": "s-odrzucony"
