--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ function showError(msg) {
 function statusClass(status) {
   return {
     "nowy": "s-nowy",
-    "Porzucony": "s-porzucony",
+    "porzucony": "s-porzucony",
     "nie_odbiera": "s-nie_odbiera",
     "obsluzony": "s-obsluzony",
     "odrzucony": "s-odrzucony"
