--- a/index.html
+++ b/index.html
@@ -368,11 +368,11 @@ function showError(msg) {
   
 function statusClass(status) {
   return {
-    "nowy": "s-nowy",
-    "porzucony": "s-porzucony",
-    "nie_odbiera": "s-nie_odbiera",
-    "obsluzony": "s-obsluzony",
-    "odrzucony": "s-odrzucony"
+    "Nowy": "s-nowy",
+    "Porzucony": "s-porzucony",
+    "Nie_odbiera": "s-nie_odbiera",
+    "Obsłużony": "s-obsluzony",
+    "Odrzucony": "s-odrzucony"
   }[status] || "s-nowy";
 }
 
