--- a/index.html
+++ b/index.html
@@ -412,7 +412,6 @@ function render(lead) {
   const status = lead["Obecny status"] || "nowy";
   const lastUpdate = lead["Data ostatniej aktualizacji"];
   const editable = canEdit(lastUpdate, status);
-  const isNew = status === "nowy" || status === "";
 
   app.innerHTML = `
     <div class="header">
@@ -430,7 +429,7 @@ function render(lead) {
           </div>
           <div>
             <span class="status-badge ${statusClass(status)}">
-              ${status.replace("_"," ").toUpperCase()}
+              ${(status || "nowy").replace("_"," ").toUpperCase()}
             </span>
             <div class="muted">
               Ostatnia zmiana:<br>
@@ -498,11 +497,6 @@ function render(lead) {
   `;
 }
   
-function confirmUpdate(status) {
-  if (!confirm("Czy na pewno chcesz zmienić status leada?")) return;
-  updateStatus(status);
-}
-  
 async function updateStatus(status) {
   // ekran ładowania
   app.innerHTML = `
@@ -520,7 +514,14 @@ async function updateStatus(status) {
 
     const data = await res.json();
 
+    const data = await res.json();
+
     if (!data.success) {
+      if (data.error === "time_limit_exceeded") {
+        showError("⛔ Minął limit 15 minut. Status został zablokowany.");
+        return;
+      }
+    
       throw new Error(data.error || "Błąd zapisu");
     }
 
@@ -609,35 +610,39 @@ function loadList(reset = true) {
   if (reset) {
     offset = 0;
     allRows = [];
-    app.innerHTML = `
-      <div class="content">
-        <h3>📊 Lista leadów</h3>
-      </div>
-    `;
   }
 
-  showLoader("Ładowanie leadów…");
+  const analysis = isAnalysisMode();
 
-  fetch(`${API_URL}?action=list&token=${token}&limit=${LIMIT}&offset=${offset}`)
+  const params = new URLSearchParams({
+    action: "list",
+    token,
+    limit: analysis ? 10000 : LIMIT,
+    offset: analysis ? 0 : offset
+  });
+
+  showLoader(analysis ? "Analiza danych…" : "Ładowanie leadów…");
+
+  fetch(`${API_URL}?${params}`)
     .then(r => r.json())
     .then(d => {
       hideLoader();
 
       if (!d.success) {
-        showError("Brak dostępu do listy leadów");
+        showError("Błąd pobierania leadów");
         return;
       }
 
+      allRows = d.rows;
+      offset = allRows.length;
       totalLeads = d.total;
-      allRows = allRows.concat(d.rows);
-      offset += d.rows.length;
 
       renderList(allRows);
       populateCampaigns(allRows);
     })
     .catch(() => {
       hideLoader();
-      showError("Błąd połączenia z API");
+      showError("Błąd połączenia");
     });
 }
 
@@ -711,6 +716,10 @@ function renderList(rows) {
     if (btn) {
       btn.style.display = offset >= totalLeads ? "none" : "inline-block";
     }
+  const btn = document.getElementById("loadMoreBtn");
+  if (btn) {
+    btn.style.display = isAnalysisMode() ? "none" : "inline-block";
+  }
   }
   
 function renderTableRows(rows) {
@@ -840,6 +849,16 @@ function toggleDateSort() {
 
   btn.innerText = dateSortDesc ? "📅 Najnowsze" : "📅 Najstarsze";
   filterTable(); // Odśwież widok z uwzględnieniem filtrów
+}
+
+function isAnalysisMode() {
+  return (
+    document.getElementById("dateFrom").value ||
+    document.getElementById("dateTo").value ||
+    document.getElementById("statusFilter").value ||
+    document.getElementById("campaignFilter").value ||
+    document.getElementById("searchInput").value.trim()
+  );
 }
 </script>
 </body>
