--- a/index.html
+++ b/index.html
@@ -634,6 +634,9 @@ function loadList(reset = true) {
 
       renderList(allRows);
       populateCampaigns(allRows);
+
+      // 🔄 preload pełnych danych w tle
+      fetch(`${API_URL}?action=list&token=${token}&preload=1`);
     })
     .catch(() => {
       hideLoader();
@@ -831,16 +834,36 @@ function sortTable(key) {
 function toggleDateSort() {
   dateSortDesc = !dateSortDesc;
   const btn = document.getElementById("sortBtn");
-  
-  allRows.sort((a, b) => {
-    const dateA = new Date(a.created || 0);
-    const dateB = new Date(b.created || 0);
-    return dateSortDesc ? dateB - dateA : dateA - dateB;
-  });
 
-  btn.innerText = dateSortDesc ? "📅 Najnowsze" : "📅 Najstarsze";
-  filterTable(); // Odśwież widok z uwzględnieniem filtrów
+  if (needsFullData()) {
+    showLoader("Ładowanie pełnych danych…");
+
+    fetch(`${API_URL}?action=cache&token=${token}`)
+      .then(r => r.json())
+      .then(d => {
+        hideLoader();
+
+        if (d.success) {
+          allRows = d.rows;
+          filterTable();
+        }
+      });
+
+    btn.innerText = dateSortDesc ? "📅 Najnowsze" : "📅 Najstarsze";
+    return;
+  }
+
+  filterTable();
 }
+
+function needsFullData() {
+  return (
+    document.getElementById("dateFrom")?.value ||
+    document.getElementById("dateTo")?.value ||
+    !dateSortDesc // najstarsze
+  );
+}
+
 </script>
 </body>
 </html>
